@@ -216,3 +216,7 @@ AgentCall.ajs first example
 default keyword in class methods
 Support for IsDefault in Function
 Default method invocation in Dynamic Classic objects
+
+2010-02-14
+Support for calling native methods on DynamicObject, DynamicClassicObject
+New examples with default method: DefaultMethodProxy.ajs, DefaultMethodLoadBalancer.ajs
